<resources>
    <string name="app_name">FinApt</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="register_as_shopkeeper">Register as Shopkeeper</string>
    <string name="register_as_customer">Register as Customer</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="select_your_state">Select Your State</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="create_profile">Create Profile</string>
    <string name="use_your_original_credentials">Use your original credentials</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="save_and_proceed">SAVE AND PROCEED</string>
    <string name="error">Error</string>
    <string name="state_not_matched">Details entered for State and Pin Code not matched</string>
    <string name="try_again_with_another_number">The phone number already exists. Try with other contact number!</string>
    <string name="verifying_pincode">Verifying Pincode</string>
    <string name="please_wait">Please Wait</string>
    <string name="incorrect_pincode">Incorrect Pincode</string>
    <string name="wrong_pincode">Wrong Pincode</string>
    <string name="validating_number">Validating number</string>
    <string name="please_fill_all_details">Please fill all the required details</string>
    <string name="sending_otp">Sending OTP</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="new_otp_sent">New OTP sent</string>
    <string name="please_enter_valid_code">Please enter a valid code</string>
    <string name="some_error_occurred">Some Error Occurred. Please try again</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="profile_created_successfully">Profile created successfully</string>
    <string name="profile_created_unsuccessfully">Profile not created. Try Again!</string>
    <string name="enter_your_shop_name">Enter Your Shop Name</string>
    <string name="enter_shop_address">Enter Shop Address</string>
    <string name="enter_your_gstin">Enter Your GSTIN</string>
    <string name="signing_in">Signing In</string>
    <string name="please_verify_your_email">Please Verify Your Email Address</string>
    <string name="signed_in_as_customer">Signed in as Customer</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="signed_in_as_shopkeeper">Signed in as Shopkeeper</string>
    <string name="otp">O\tT\tP</string>
    <string name="enter_the_otp_sent_to">We have sent the verification code to</string>
    <string name="your_mobile_number">your mobile number</string>
    <string name="verification">VERIFICATION</string>
    <string name="start_hint">✱✱✱✱✱✱</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="helper_text">Required*</string>
    <string name="or">OR</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="customer_logout">Customer Logout</string>
    <string name="shopkeeper_logout">Shopkeeper Logout</string>
    <string name="shop_name">Shop Name</string>
    <string name="category">Category</string>
    <string name="total_amount">Total Amount: ₹</string>
    <string name="view_bill">View Bill</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="create_bill">CREATE BILL</string>
    <string name="you_can_create_bill_for_your_store">You can create bill for your store</string>
    <string name="send_bill">SEND BILL</string>
    <string name="create_and_send_bill_to_a_number">Create and send bill to a number</string>
    <string name="update_inventory">UPDATE INVENTORY</string>
    <string name="add_remove_or_update_your_stocks">Add, remove or update your stocks</string>
    <string name="billing_history">BILLING HISTORY</string>
    <string name="check_your_billing_history_and_update_them">Check your billing history and update them</string>
    <string name="create_n_bill">Create\nBill</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="total_amount2">Total Amount</string>
    <string name="submit">Submit</string>
    <string name="check_item_s">CHECK ITEM(S)</string>
    <string name="remove_item_s">REMOVE ITEM(S)</string>
    <string name="gstin">GSTIN</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="price_per_item">Price Per Item</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="your_inventory">Your Inventory</string>
    <string name="quantity">Quantity</string>
    <string name="remove_items">Remove Items</string>
    <string name="edit_item_details">Edit Item Details</string>
    <string name="unable_to_fetch">Unable to fetch. Please try again</string>
    <string name="message">Message</string>
    <string name="no_chat_history_start_by_clicking_on_the_icon_below">No chat history\nStart by clicking on the icon below</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message…</string>
    <string name="hello">Hello!</string>
    <string name="send_nbill">Send\nBill</string>
    <string name="update_n_inventory">Update\nInventory</string>
    <string name="billing_n_history">Billing\nHistory</string>
    <string name="hello_again">Hello Again!</string>
    <string name="you_have_been_missed">Welcome Back! You Have Been Missed!</string>
    <string name="track_your_success">Track Your Success!</string>
    <string name="welcome_on_board">Welcome On Board!</string>
    <string name="item">Item</string>
    <string name="add">ADD</string>
    <string name="remove_item">Remove Item</string>
    <string name="add_more_item">+Add More Item</string>
    <string name="edit">EDIT</string>
    <string name="add_items">Add Items</string>
    <string name="we_waited_so_long_for_you">We waited so long for you😀..Let\'s FinApt!</string>
    <string name="items_are_going_out_of_stocks">Items are going less on stocks</string>
    <string name="inventory_alerts">Inventory Alert⚠</string>
    <string name="creating_bill">Creating Bill</string>
    <string name="shop_owner">Shop Owner</string>
    <string name="long_gone_days_for_tally_sheets_or_paperwork_manage_your_bills_and_inventory_here_let_s_begin">Long gone days for tally sheets or paperwork, manage your bills and inventory here. Let\'s Begin!</string>
    <string name="personal_ntracker">Personal\nTracker</string>
    <string name="track_your_expenses_and_categorize_according_in_shopping_food_etc_join_us">Track your expenses and categorize according in Shopping, Food,.etc. Join us.</string>
    <string name="already_a_user_click_here_to_sign_in">Already a user? Click here to Sign In</string>
    <string name="enter_receiver_s_phone_number">Enter Receiver\'s Phone Number</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="customer_name">Customer Name</string>
    <string name="rejected">Rejected</string>
    <string name="customer_doesnt_exists">Customer Doesn\'t Exists. Try another contact number.</string>
    <string name="billed_to">Billed To:</string>
    <string name="items">Items</string>
    <string name="added">Added</string>
    <string name="select_category">Select Category</string>
    <string name="shopping">Shopping</string>
    <string name="food_beverages"><![CDATA[Food & Beverages]]></string>
    <string name="medicines">Medicines</string>
    <string name="housing">Housing</string>
    <string name="groceries">Groceries</string>
    <string name="clothing">Clothing</string>
    <string name="personal">Personal</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>
    <string name="transportation">Transportation</string>
    <string name="add_to_expenses">ADD TO EXPENSES</string>
    <string name="please_select_category_to_add">Please select a category to add it to expenses!</string>
    <string name="_12_45_pm">12:45 PM</string>
    <string name="medical_healthcare">Healthcare</string>
    <string name="education">Education</string>
    <string name="add_item_s">ADD ITEM(S)</string>
    <string name="edit_item_s">EDIT ITEM(S)</string>
    <string name="to_self">To Self</string>
    <string name="recently_uploaded_bills">Recently Uploaded Bills</string>
    <string name="total_expense">Total Expenses:</string>
    <string name="pendingg">Pending</string>
    <string name="create_an_expense">Create an expense</string>
    <string name="remarks_optional">Remarks (optional)</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="welcome_to_finapt">Welcome to FinApt</string>
    <string name="for_your_financial_fitness">For Your Financial Fitness!</string>
    <string name="manage_your_expenses">Manage Your Expenses</string>
    <string name="get_control_over_your_money">Get control over your Money</string>
    <string name="track_sales_and_profits">Track Sales and Profits</string>
    <string name="now_is_the_time_to_upgrade">Fed up of managing long tally excel sheets? Now\'s the time to upgrade!!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="andhra_pradesh">Andhra Pradesh</string>
    <string name="arunachal_pradesh">Arunachal Pradesh</string>
    <string name="assam">Assam</string>
    <string name="bihar">Bihar</string>
    <string name="chandigarh">Chandigarh</string>
    <string name="chattisgarh">Chhattisgarh</string>
    <string name="delhi">Delhi</string>
    <string name="goa">Goa</string>
    <string name="gujarat">Gujarat</string>
    <string name="haryana">Haryana</string>
    <string name="himachal_pradesh">Himachal Pradesh</string>
    <string name="jammu_and_kashmir">Jammu and Kashmir</string>
    <string name="jharkhand">Jharkhand</string>
    <string name="karnataka">Karnataka</string>
    <string name="kerala">Kerala</string>
    <string name="madhya_pradesh">Madhya Pradesh</string>
    <string name="maharastra">Maharashtra</string>
    <string name="manipur">Manipur</string>
    <string name="meghalaya">Meghalaya</string>
    <string name="mizoram">Mizoram</string>
    <string name="nagaland">Nagaland</string>
    <string name="odisha">Odisha</string>
    <string name="punjab">Punjab</string>
    <string name="rajasthan">Rajasthan</string>
    <string name="sikkim">Sikkim</string>
    <string name="tamil_nadu">Tamil Nadu</string>
    <string name="telangana">Telangana</string>
    <string name="tripura">Tripura</string>
    <string name="uttar_pradesh">Uttar Pradesh</string>
    <string name="uttarakhand">Uttarakhand</string>
    <string name="west_bengal">West Bengal</string>
    <string name="self_expense">Self Expense</string>
    <string name="expense_added_successfully">Expense added successfully</string>
    <string name="invoice">Invoice</string>
    <string name="check_item_details">Check Item Details</string>
</resources>