<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selectCategoryTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/select_category"
        android:background="@color/color_primary"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#fff"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selectCategoryTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/selectCategoryRadioGroup"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                >
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/clothing"
                    android:id="@+id/clothingRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_beverages"
                    android:id="@+id/foodRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medical_healthcare"
                    android:id="@+id/medicinesRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:id="@+id/educationRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/housing"
                    android:id="@+id/housingRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/groceries"
                    android:id="@+id/groceriesRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal"
                    android:id="@+id/personalRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment"
                    android:id="@+id/entertainmentRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transportation"
                    android:id="@+id/transportationRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/others"
                    android:id="@+id/othersRadioButton"
                    android:checked="false"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/customerCategoryAddToExpensesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/selectCategoryRadioGroup"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/add_to_expenses"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                app:rippleColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>