<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/edit_item_details"
        android:background="@color/color_primary"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#fff"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/item_name"
        android:id="@+id/inameLayout"
        app:startIconDrawable="@drawable/ic_baseline_sell_24"
        android:layout_marginTop="10dp"
        android:textSize="20sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/iname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:background="@color/fui_transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/price_per_item"
        app:startIconDrawable="@drawable/ic_baseline_sell_24"
        android:layout_marginTop="10dp"
        android:textSize="20sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/iprice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:background="@color/fui_transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/quantity"
        app:startIconDrawable="@drawable/ic_baseline_sell_24"
        android:layout_marginTop="10dp"
        android:textSize="20sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/iquantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:background="@color/fui_transparent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        android:id="@+id/update"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>